[package]
name = "muses_sensel"
version = "0.1.0"
authors = ["Benedict Gaster <benedict.gaster@uwe.ac.uk>"]
edition = "2018"

[dependencies]
serde_json = "1.0.40"
serde = "1.0.98"
serde_derive = "1.0.98"
env_logger = "0.6.2"
log = "0.4.8"
getopts = "0.2"
bitflags = "1.1.0"
rosc = "0.1.6"
num = "0.2.0"

[build-dependencies]
bindgen = "0.51.0"
cc = "1.0"